src/objects/BillItem__c.object
<CustomObject>
    <fields>
        <fullName>BillItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill Item</label>
        <referenceTo>BillItem__c</referenceTo>
        <relationshipLabel>Bill Items</relationshipLabel>
        <relationshipName>BillItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillServiceType__c</fullName>
        <label>Bill Service Type</label>
        <referenceTo>BillServiceType__c</referenceTo>
        <relationshipLabel>Bill Items</relationshipLabel>
        <relationshipName>BillItems</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BilledAmount__c</fullName>
        <description>Amount Returned from Heroku</description>
        <label>Billed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargeBasisValue__c</fullName>
        <description>Unmeasured (RV) / Fix Charge / Sundry / Sample</description>
        <label>Charge Basis Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <description>Day After previous bill Item &quot;to&quot; date.</description>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HerokuPostgresId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>20 Sep 2017, P Dixon - external id for Heroku mastered objects</description>
        <externalId>true</externalId>
        <label>Heroku Postgres Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NumberOfDays__c</fullName>
        <description>From - To (return days) Number of days that this bill item exists for. 
Display days for Bill Item</description>
        <formula>To__c  -  From__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RateBand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Band</label>
        <referenceTo>RateBand__c</referenceTo>
        <relationshipName>BillItemsCreditItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate</label>
        <referenceTo>Rate__c</referenceTo>
        <relationshipLabel>Bill Items</relationshipLabel>
        <relationshipName>BillItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reading__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reading</label>
        <referenceTo>Reading__c</referenceTo>
        <relationshipName>BillItemsCreditItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceItem__c</fullName>
        <label>Service Item</label>
        <referenceTo>ServiceItem__c</referenceTo>
        <relationshipLabel>Bill Items</relationshipLabel>
        <relationshipName>BillItemsCreditItem</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <description>Last day of Bill Item</description>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VolumeUsed__c</fullName>
        <description>Device consumption or Value used to calculated this charge line.
Measured</description>
        <label>Volume Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bill Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bill Items</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>